# secs

./: Cargo.toml  README.md
.cargo/: config
codegen/: Cargo.toml
codegen/src/: builder.rs  command.rs  component.rs  config.rs  ecs.rs  entity.rs  lib.rs  resource.rs  store.rs  system.rs
example/: Cargo.toml  build.rs
example/ecs/: components.ron  main.ron  resources.ron  systems.ron
example/src/: ecs.rs  main.rs
lib/: Cargo.toml
lib/src/: executor.rs  join.rs  lib.rs  storage.rs
