[package]
name = "secs-codegen"
version = "0.1.0"
authors = ["Sébastien d'Herbais de Thun <sebastien.dherbais@student.uclouvain.be>"]
edition = "2018"

[dependencies]
# For rust code generation
quote = "1.0"

# Token stream
proc-macro2 = "1.0"

# Rust code parsing
syn = { version = "1.0", features = [ "full" ] }

# For deserilization of config files
serde = { version = "1.0", features = [ "derive" ]}

# Rusty Object Notation, the format used for config files
ron = "0.6.4"

# Conversion of string case
convert_case = "0.4.0"