[package]
name = "secs"
version = "0.1.0"
authors = ["Sébastien d'Herbais de Thun <sebastien.dherbais@student.uclouvain.be>"]
edition = "2018"

[dependencies]
# Bitset for designating occupation
hibitset = "0.6.3"

# Fast but non-secure hash maps
fxhash = "0.2.1"

# Fast synchronization primitives
parking_lot = "0.11.1"

# Convert closures into wakers.
waker-fn = "1.1.0"

# Thread local variable
thread_local = "1.1"

# Fast mpmc channels
crossbeam-channel = "0.5.1"